drivers/usb: add separated Samsung MTP option

--- a/arch/arm64/configs/exynos9610-m21dd_defconfig
+++ b/arch/arm64/configs/exynos9610-m21dd_defconfig
@@ -3281,6 +3281,7 @@ CONFIG_SND_SOC_SAMSUNG_VOGUE_RT5665=y
 CONFIG_SND_SOC_SAMSUNG_VOGUE_CS47L15=y
 # CONFIG_SND_SOC_ARNDALE_RT5631_ALC5631 is not set
 CONFIG_SND_SOC_SAMSUNG_AUDIO=y
+CONFIG_SND_SOC_SAMSUNG_SYSFS_EARJACK=y
 CONFIG_SND_SOC_SAMSUNG_ABOX=y
 # CONFIG_SEC_SND_SYNCHRONIZED_IPC is not set
 CONFIG_SEC_SND_SYNCHRONIZED_IPC_RICHTEK=y
@@ -3808,6 +3809,8 @@ CONFIG_USB_CONFIGFS_F_MIDI=y
 # CONFIG_USB_CONFIGFS_F_HID is not set
 # CONFIG_USB_CONFIGFS_F_UVC is not set
 # CONFIG_USB_CONFIGFS_F_PRINTER is not set
+
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 
 #
 # USB Power Delivery and Type-C drivers
