--- a/arch/arm64/configs/exynos9610-m21dd_defconfig
+++ b/arch/arm64/configs/exynos9610-m21dd_defconfig
@@ -3802,6 +3802,7 @@ CONFIG_USB_F_PTP=y
 CONFIG_USB_F_AUDIO_SRC=y
 CONFIG_USB_F_ACC=y
 CONFIG_USB_F_CONN_GADGET=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP is not set
 CONFIG_USB_CONFIGFS=y
 # CONFIG_USB_CONFIGFS_SERIAL is not set
 CONFIG_USB_CONFIGFS_ACM=y
